Added Test2 and modif index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<a href="Test4">TEST4</a>
+<a href="Test4">Home Work 4</a>
+<a href="Test2">Home Work 3</a>
 </body>
 </html>
