--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <body>
 <a href="Test4">Home Work 4</a>
 <a href="Test2">Home Work 3</a>
+<a href="Test6">Home Work 3</a>
+<a href="Test7">Home Work 4</a>
+<a href="Test8">Home Work 5</a>
 </body>
 </html>
